--- a/notebooks/kubeflow_pipelines/cicd/labs/cloudbuild_vertex.yaml
+++ b/notebooks/kubeflow_pipelines/cicd/labs/cloudbuild_vertex.yaml
@@ -13,15 +13,17 @@
 
 steps:
 # Build the trainer image
-- name: # TODO
-  args: # TODO
-  dir:  # TODO
+- name: 'gcr.io/cloud-builders/docker'
+  id: 'Build the trainer image'
+  args: ['build','-t','gcr.io/$PROJECT_ID/trainer_image_covertype_vertex:latest' ,'.']
+  dir:  $_PIPELINE_FOLDER/trainer_image_vertex
 
 
 # Push the trainer image, to make it available in the compile step
-- name: # TODO
-  args: # TODO
-  dir:  # TODO
+- name: 'gcr.io/cloud-builders/docker'
+  id: 'Push the trainer image'
+  args: ['push','gcr.io/$PROJECT_ID/trainer_image_covertype_vertex:latest' ,'.']
+  dir:  $_PIPELINE_FOLDER/trainer_image_vertex
 
 
 # Compile the pipeline
